// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  data-testid="commentReplyList-comment-id"
  id="talk-comments-replyList-log--comment-id"
  role="log"
>
  <ForwardRef(forwardRef)
    key="comment-1"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
      comment={
        Object {
          "id": "comment-1",
        }
      }
      disableReplies={false}
      indentLevel={1}
      key="comment-1"
      localReply={false}
      me={null}
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
      showConversationLink={false}
      story={
        Object {
          "id": "story-id",
        }
      }
    />
  </ForwardRef(forwardRef)>
  <ForwardRef(forwardRef)
    key="comment-2"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
      comment={
        Object {
          "id": "comment-2",
          "showConversationLink": true,
        }
      }
      disableReplies={false}
      indentLevel={1}
      key="comment-2"
      localReply={false}
      me={null}
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
      showConversationLink={true}
      story={
        Object {
          "id": "story-id",
        }
      }
    />
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`when there is more disables load more button 1`] = `
<ForwardRef(forwardRef)
  data-testid="commentReplyList-comment-id"
  id="talk-comments-replyList-log--comment-id"
  role="log"
>
  <ForwardRef(forwardRef)
    key="comment-1"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
      comment={
        Object {
          "id": "comment-1",
        }
      }
      indentLevel={1}
      key="comment-1"
      me={null}
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
      showConversationLink={false}
      story={
        Object {
          "id": "story-id",
        }
      }
    />
  </ForwardRef(forwardRef)>
  <ForwardRef(forwardRef)
    key="comment-2"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
      comment={
        Object {
          "id": "comment-2",
        }
      }
      indentLevel={1}
      key="comment-2"
      me={null}
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
      showConversationLink={false}
      story={
        Object {
          "id": "story-id",
        }
      }
    />
  </ForwardRef(forwardRef)>
  <Indent
    level={1}
    noBorder={true}
  >
    <Localized
      id="comments-replyList-showAll"
    >
      <ForwardRef(forwardRef)
        aria-controls="talk-comments-replyList-log--comment-id"
        disabled={true}
        fullWidth={true}
        id="talk-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </ForwardRef(forwardRef)>
    </Localized>
  </Indent>
</ForwardRef(forwardRef)>
`;

exports[`when there is more renders a load more button 1`] = `
<ForwardRef(forwardRef)
  data-testid="commentReplyList-comment-id"
  id="talk-comments-replyList-log--comment-id"
  role="log"
>
  <ForwardRef(forwardRef)
    key="comment-1"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
      comment={
        Object {
          "id": "comment-1",
        }
      }
      indentLevel={1}
      key="comment-1"
      me={null}
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
      showConversationLink={false}
      story={
        Object {
          "id": "story-id",
        }
      }
    />
  </ForwardRef(forwardRef)>
  <ForwardRef(forwardRef)
    key="comment-2"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
      comment={
        Object {
          "id": "comment-2",
        }
      }
      indentLevel={1}
      key="comment-2"
      me={null}
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
      showConversationLink={false}
      story={
        Object {
          "id": "story-id",
        }
      }
    />
  </ForwardRef(forwardRef)>
  <Indent
    level={1}
    noBorder={true}
  >
    <Localized
      id="comments-replyList-showAll"
    >
      <ForwardRef(forwardRef)
        aria-controls="talk-comments-replyList-log--comment-id"
        disabled={false}
        fullWidth={true}
        id="talk-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </ForwardRef(forwardRef)>
    </Localized>
  </Indent>
</ForwardRef(forwardRef)>
`;
